# Tests4Py

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  api-demo.ipynb  cloc.py  cloc.txt  copy_and_create.py  extract.py  get_events.py  get_tests.py  pyproject.toml  requirements.py  requirements.txt  setup.cfg  test.py  tests.json  verify.py  verify_param.py
.github/workflows/: test-test4py.yml  test-tests4py.yml
fake_repo/: cookiecutter.json
fake_repo/hooks/: pre_gen_project.py
notebooks/: api.ipynb  cli.ipynb  sfl.ipynb
projects_old/PySnooper/: project.ini
projects_old/PySnooper/bugs/1/: bug.ini
projects_old/PySnooper/bugs/2/: bug.ini
projects_old/PySnooper/bugs/3/: bug.ini
projects_old/ansible/: project.ini
projects_old/ansible/bugs/1/: bug.ini
projects_old/ansible/bugs/10/: bug.ini
projects_old/ansible/bugs/11/: bug.ini
projects_old/ansible/bugs/12/: bug.ini
projects_old/ansible/bugs/13/: bug.ini
projects_old/ansible/bugs/14/: bug.ini
projects_old/ansible/bugs/15/: bug.ini
projects_old/ansible/bugs/16/: bug.ini
projects_old/ansible/bugs/17/: bug.ini
projects_old/ansible/bugs/18/: bug.ini
projects_old/ansible/bugs/2/: bug.ini
projects_old/ansible/bugs/3/: bug.ini
projects_old/ansible/bugs/4/: bug.ini
projects_old/ansible/bugs/5/: bug.ini
projects_old/ansible/bugs/6/: bug.ini
projects_old/ansible/bugs/7/: bug.ini
projects_old/ansible/bugs/8/: bug.ini
projects_old/ansible/bugs/9/: bug.ini
projects_old/black/: project.ini
projects_old/black/bugs/1/: bug.ini
projects_old/black/bugs/10/: bug.ini
projects_old/black/bugs/11/: bug.ini
projects_old/black/bugs/12/: bug.ini
projects_old/black/bugs/13/: bug.ini
projects_old/black/bugs/14/: bug.ini
projects_old/black/bugs/15/: bug.ini
projects_old/black/bugs/16/: bug.ini
projects_old/black/bugs/17/: bug.ini
projects_old/black/bugs/18/: bug.ini
projects_old/black/bugs/19/: bug.ini
projects_old/black/bugs/2/: bug.ini
projects_old/black/bugs/20/: bug.ini
projects_old/black/bugs/21/: bug.ini
projects_old/black/bugs/22/: bug.ini
projects_old/black/bugs/23/: bug.ini
projects_old/black/bugs/3/: bug.ini
projects_old/black/bugs/4/: bug.ini  fuzz_target.py
projects_old/black/bugs/5/: bug.ini
projects_old/black/bugs/6/: bug.ini
projects_old/black/bugs/7/: bug.ini
projects_old/black/bugs/8/: bug.ini
projects_old/black/bugs/9/: bug.ini
projects_old/cookiecutter/: project.ini
projects_old/cookiecutter/bugs/1/: bug.ini
projects_old/cookiecutter/bugs/2/: bug.ini
projects_old/cookiecutter/bugs/3/: bug.ini
projects_old/cookiecutter/bugs/4/: bug.ini
projects_old/fastapi/: project.ini
projects_old/fastapi/bugs/1/: bug.ini
projects_old/fastapi/bugs/10/: bug.ini
projects_old/fastapi/bugs/11/: bug.ini
projects_old/fastapi/bugs/12/: bug.ini
projects_old/fastapi/bugs/13/: bug.ini
projects_old/fastapi/bugs/14/: bug.ini
projects_old/fastapi/bugs/15/: bug.ini
projects_old/fastapi/bugs/16/: bug.ini
projects_old/fastapi/bugs/2/: bug.ini
projects_old/fastapi/bugs/3/: bug.ini
projects_old/fastapi/bugs/4/: bug.ini
projects_old/fastapi/bugs/5/: bug.ini
projects_old/fastapi/bugs/6/: bug.ini
projects_old/fastapi/bugs/7/: bug.ini
projects_old/fastapi/bugs/8/: bug.ini
projects_old/fastapi/bugs/9/: bug.ini
projects_old/httpie/: project.ini
projects_old/httpie/bugs/1/: bug.ini
projects_old/httpie/bugs/2/: bug.ini
projects_old/httpie/bugs/3/: bug.ini
projects_old/keras/: project.ini
projects_old/luigi/: project.ini
projects_old/matplotlib/: project.ini
projects_old/pandas/: project.ini
projects_old/sanic/: project.ini
projects_old/scrapy/: project.ini
projects_old/spacy/: project.ini
projects_old/thefuck/: project.ini
projects_old/tornado/: project.ini
projects_old/tqdm/: project.ini
projects_old/youtube-dl/: project.ini
src/BugsTest/: cli.py  framework.py
src/BugsTest/framework/: __init__.py  systemtest.py  unittest.py  utils.py
src/BugsTest/grammars/: antlr.py  python.py  utils.py  visitor.py
src/BugsTest/projects/: __init__.py  ansible.py  black.py  cookiecutter.py  fastapi.py  httpie.py  keras.py  luigi.py  matplotlib.py  pandas.py  pysnooper.py  sanic.py  scrapy.py  spacy.py  thefuck.py  tornado.py  tqdm.py  youtubedl.py
src/BugsTest/tests/: __init__.py  diversity.py  generator.py  utils.py
src/Tests4Py/: __init__.py  cli.py
src/Tests4Py/framework/: __init__.py  constants.py  default.py  environment.py  logger.py  systemtest.py  typing.py  unittest.py  utils.py
src/Tests4Py/grammars/: antlr.py  python.py  youtubedl.py
src/Tests4Py/projects/: __init__.py  ansible.py  black.py  cookiecutter.py  fastapi.py  httpie.py  keras.py  luigi.py  matplotlib.py  pandas.py  pysnooper.py  sanic.py  scrapy.py  spacy.py  thefuck.py  tornado.py  tqdm.py  youtubedl.py
src/Tests4Py/tests/: __init__.py  diversity.py  generator.py  utils.py
src/tests4py/: __init__.py  cli.py  constants.py  environment.py  logger.py
src/tests4py/api/: __init__.py  cache.py  config.py  default.py  logging.py  report.py  test.py  utils.py
src/tests4py/cli/: __init__.py
src/tests4py/framework/: __init__.py  cache.py  config.py  constants.py  default.py  environment.py  grammar.py  logger.py  sfl.py  systemtest.py  unittest.py  utils.py
src/tests4py/grammars/: antlr.py  default.py  fuzzer.py  parser.py  python.py  tree.py  utils.py
src/tests4py/projects/: __init__.py  ansible.py  black.py  calculator.py  cookiecutter.py  expression.py  fastapi.py  httpie.py  keras.py  luigi.py  markup.py  matplotlib.py  middle.py  pandas.py  pysnooper.py  sanic.py  scrapy.py  spacy.py  thefuck.py  tornado.py  tqdm.py  youtubedl.py
src/tests4py/sfl/: __init__.py  constants.py  utils.py
src/tests4py/tests/: diversity.py  generator.py  utils.py
tests/: grammar.g4  grammar.py  test_api.py  test_commands.py  test_generation.py  test_grammar.py  test_projects.py  test_sfl.py  utils.py
(+2328 files in other folders)
