[build-system]
requires = [
    "setuptools>=67.6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tests4py"
version = "0.0.8"
authors = [
    { name = "Marius Smytzek", email = "marius.smytzek@cispa.de" },
    { name = "Martin Eberlein", email = "ebermart@informatik.hu-berlin.de" },
    { name = "Batuhan Serce", email = "batuhan.serce@cispa.de" },
]
description = "Tests4Py a benchmark for testing bugs"
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "tabulate>=0.9.0",
    "sflkit>=0.2.18",
    "sflkitlib>=0.0.3",
    "unidiff>=0.7.5",
    "psutil>=5.9.5"
]

[project.urls]
"Homepage" = "https://github.com/smythi93/Tests4Py"
"Bug Tracker" = "https://github.com/smythi93/Tests4Py/issues"

[project.scripts]
t4p = "tests4py.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "pytest-rerunfailures>=11.1.2",
    "parameterized>=0.8.1"
]

[tool.black]
line-length = 88
target-version = ['py310']
