[metadata]
name = Tests4Py
version = attr: Tests4Py.__version__
author = Marius Smytzek & Martin Eberlein & Michaël Mera
author_email = marius.smytzek@cispa.de
description = Tests4Py a benchmark for testing bugs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smythi93/Tests4Py
project_urls =
    Bug Tracker = https://github.com/smythi93/Tests4Py/issues
license = MIT License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    fuzzingbook~=1.1
    isla-solver~=1.10

[options.packages.find]
where = src

[options.package_data]
Tests4Py.projects.resources =
    *.txt
    */*.txt
    */*/*.txt
    */*/*.sh

[options.extras_require]
test =
    pytest
dev =

[options.entry_points]
console_scripts =
    t4p = Tests4Py.cli:main
