[metadata]
name = tests4py
version = attr: tests4py.__version__
author = Marius Smytzek & Martin Eberlein
author_email = marius.smytzek@cispa.de
description = Tests4Py a benchmark for testing bugs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smythi93/Tests4Py
project_urls =
    Bug Tracker = https://github.com/smythi93/Tests4Py/issues
license = MIT License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    fuzzingbook>=1.1
    isla-solver>=1.10
    tabulate>=0.9.0
    sflkit>=0.1.1
    whatthepatch>=1.0.5

[options.packages.find]
where = src

[options.package_data]
Tests4Py.projects.resources =
    *.txt
    */*.txt
    */*/requirements.txt
    */*/fix.patch
    */*/explanation.md
    */*/setup.sh

[options.extras_require]
test =
    pytest>=7.2.2
    pytest-cov>=4.0.0
    pytest-html>=3.2.0
    pytest-rerunfailures>=11.1.2
    parameterized>=0.8.1
dev =

[options.entry_points]
console_scripts =
    t4p = tests4py.cli:main
